--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,35 @@
 </head>
 <body>
     <h1>Brenda's Lasagna</h1>
+    <img src="../images/classic-lasagna.jpg" alt="A slice of Brenda's lasagna">
+    <h3>Description</h3>
+    <p>Brenda's Lasagna is a family favorite. It contains
+        layers of noodles, cheese, and meat sauce. This
+        recipe is quick and easy to make. The longest step
+        the bake time, but it is totally worth it because
+        Brenda's lasagna tastes heavenly.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 (16 ounce) package lasagna noodles</li>
+        <li>1 pound lean ground beef</li>
+        <li>1 (16 ounce) jar spaghetti sauce</li>
+        <li>1/2 pound shredded mozzarella cheese</li>
+        <li>1/2 pound shredded Cheddar cheese</li>
+        <li>1 pint ricotta cheese</li>
+        <li>1 clove minced garlic</li>
+        <li>salt and pepper (to taste)</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Bring a large pot of lightly salted water to a boil.</li>
+        <li>Add pasta and cook for 8 to 10 minutes or until al dente; drain</li>
+        <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+        <li>In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain.</li>
+        <li>Stir in spaghetti sauce and garlic and simmer for 5 minutes.</li>
+        <li>In a medium bowl, combine mozzarella, Cheddar, and ricotta; stir well.</li>
+        <li>In a 9x13 inch pan, alternate layers of noodles, meat mixture, and cheese mixture until pan is filled</li>
+        <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
+    </ol>
 </body>
 </html>
