--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ol>
         <li><a href="./recipes/lasagna.html">Brenda's Lasagna</a></li>
         <li><a href="./recipes/chicken-marsala">Creamy Chicken Marsala</a></li>
+        <li><a href=".recipes/fettuccine-alfredo">To Die For Fettuccine Alfredo</a></li>
     </ol>
 </body>
 </html>
