Fix links on index by adding html extension

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <ol>
         <li><a href="./recipes/lasagna.html">Brenda's Lasagna</a></li>
-        <li><a href="./recipes/chicken-marsala">Creamy Chicken Marsala</a></li>
-        <li><a href=".recipes/fettuccine-alfredo">To Die For Fettuccine Alfredo</a></li>
+        <li><a href="./recipes/chicken-marsala.html">Creamy Chicken Marsala</a></li>
+        <li><a href=".recipes/fettuccine-alfredo.html">To Die For Fettuccine Alfredo</a></li>
     </ol>
 </body>
 </html>
