Add CSS styling to the site Added CSS and classes to the index to display recipe list in a grid format Added simple CSS to style the recipe pages

--- a/index.html
+++ b/index.html
@@ -2,15 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>"Italian" Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>  
+    <h1>"Italian" Recipes</h1>
+    
 
-    <ol>
-        <li><a href="./recipes/lasagna.html">Brenda's Lasagna</a></li>
-        <li><a href="./recipes/chicken-marsala.html">Creamy Chicken Marsala</a></li>
-        <li><a href="./recipes/fettuccine-alfredo.html">To Die For Fettuccine Alfredo</a></li>
-    </ol>
+
+    <div class="recipe-list">
+        <div class="recipe">
+            <a href="./recipes/fettuccine-alfredo.html">
+                <img src="images/fettuccine-alfredo.jpg" alt="fettuccine alfredo" class="image"/>
+                <div class="name">Fettuccine Alfredo</div>
+            </a>
+        </div>
+        <div class="recipe">
+            <a href="./recipes/lasagna.html">
+                <img src="images/classic-lasagna.jpg" alt="lasagna" class="image"/>
+                <div class="name">Brenda's Lasagna</div>
+            </a>
+        </div>
+        <div class="recipe">
+            <a href="./recipes/chicken-marsala.html">
+                <img src="images/chicken-marsala.jpeg" alt="marsala" class="image"/>
+                <div class="name">Chicken Marsala</div>
+        </div>
+    </div>
 </body>
 </html>
