--- a/recipes/chicken-marsala.html
+++ b/recipes/chicken-marsala.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Creamy Chicken Marsala</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Creamy Chicken Marsala</h1>
